--- a/css/app.css
+++ b/css/app.css
@@ -1,23 +1,153 @@
 :root{
     --primario:#451;
+    --secundario:#f9eded;
+    --tercero:#3270c2;
+    --cuarto:#bdbdbd;
 }
 
-*{
+
+/* GENERALES */
+*,*::after,*::before{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    list-style: none;
+    text-decoration: none;
+}
+html{
+    color: #1a1919;
 }
 
-::-webkit-scrollbar{
-    color: blanchedalmond;
-}
 
+h1{
+    font-size: 3rem;
+    /* line-height: 40px; */
+}
+h2{
+    font-size: 1.6rem;
+}
+h3{
+    font-size: 1.2rem;
+}
+h1,h2,h3,h4,h5{
+    margin: 0;
+}
+p{
+    font-size: 1rem;
+}
 img{
     width: 100%;
     object-fit: cover;
 }
 
+body::after{
+    content: "";
+    top: -50%;
+}
 .container{
-    max-width:75rem ;
+    max-width:1400px ;
     margin: 0 auto;
 }
+
+.btn{
+    font-weight: bold;
+    padding: 1rem .5rem;
+    background: var(--tercero);
+    margin: 1;
+    text-align: center;
+    border-radius:10px;
+    max-width: 10rem;
+    color: #f9eded;
+}
+
+/* navbar */
+.bg-head{
+    /* background: #e7dbdb; */
+}
+.header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo{
+    font-weight: bold;
+    white-space: nowrap;
+    color: var(--tercero);
+}
+.navbar{
+    display: flex;
+}
+.navbar__links{
+    margin: 1rem 0;
+    list-style: none;
+    padding: 0;
+    display: flex;
+}
+.navbar__links a{
+    color: #1a1919;
+    font-weight: bold;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 2rem;
+    padding: .5rem .5rem;
+}
+.navbar__links a::after{
+    position: absolute;
+    content: "";
+    bottom: 0px;
+    left: 0;
+    width: 0%;
+    height: 3px;
+    background: #1a1919;
+    transition: all .3s;
+}
+.navbar__links a:hover::after{
+    width: 100%;
+}
+
+
+.hero{
+    display: flex;
+    gap: 3rem;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.hero__content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    flex: 1 1 50%;
+}
+.hero__content h1{
+    font-size: 4rem;
+    margin: 1rem 0;
+}
+.companies{
+
+    background: var(--cuarto);
+}
+.companies__cards{
+    max-width: 57rem;
+    padding: 1.5rem 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr ));
+    justify-items: center;
+    align-items: center;
+    gap: 1rem;
+}
+.companies__cards a{
+    overflow: hidden;
+}
+.companies__cards a:hover img{
+    transform: scale(.95);
+}
+
+
+
+
+
+
+
+
