--- a/css/app.css
+++ b/css/app.css
@@ -2,7 +2,9 @@
     --primario:#451;
     --secundario:#f9eded;
     --tercero:#3270c2;
-    --cuarto:#bdbdbd;
+    --cuarto:#8eb7ee;
+    --quinto:#93c6fa;
+    --sexto:rgba(163,163,163,.2);
 }
 
 
@@ -48,6 +50,7 @@ body::after{
 .container{
     max-width:1400px ;
     margin: 0 auto;
+    padding: 0 1rem ;
 }
 
 .btn{
@@ -59,6 +62,9 @@ body::after{
     border-radius:10px;
     max-width: 10rem;
     color: #f9eded;
+}
+.btn:hover{
+    background: #8eb7ee;
 }
 
 /* navbar */
@@ -113,6 +119,7 @@ body::after{
     gap: 3rem;
     align-items: center;
     justify-content: space-evenly;
+    margin-bottom: 1.4rem;
 }
 .hero__content{
     display: flex;
@@ -124,9 +131,29 @@ body::after{
     font-size: 4rem;
     margin: 1rem 0;
 }
+
+@media (max-width: 768px){
+
+    .navbar{
+        display: none;
+    }
+    .hero{
+        flex-direction: column-reverse;
+        gap: 1rem;
+        
+    }
+    .hero__img img{
+        /* height: 20rem; */
+    }
+    .hero__content h1{
+        font-size: 2rem;
+        margin: 1rem 0;
+    }
+}
+/* COMPANIES */
 .companies{
 
-    background: var(--cuarto);
+    background: var(--sexto);
 }
 .companies__cards{
     max-width: 57rem;
@@ -143,11 +170,133 @@ body::after{
 .companies__cards a:hover img{
     transform: scale(.95);
 }
+.work{
+    position: relative;
+    padding: 2rem 0;
+}
+.work a{
+    color: var(--tercero);
+}
+.work a:hover{
+    transform: scale(1.2) translate(10px);
+}
+.work__content{
+    display: flex;
+    gap: 2rem;
+    align-items: center;
+}
+.work__text h2{
+    margin: 1rem 0;
+}
+.testimonial .heading{
+    max-width: 600px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 1rem 0;
+}
+.testimonial .heading h4{
+    color: var(--tercero);
+    font-weight: bold;
+}
 
+.testimonial .heading h2{
+    font-size: 3rem;
+    font-weight: normal;
+}
+.testimonial .mySwiper{
+    position: relative;
+    padding: .2rem .1rem;
+}
+.swiper-wrapper{
+    padding: 1rem ;
+    margin: 1rem 0;
+}
+.swiper-slide{
+    text-align: center;
+    box-shadow: 10px 10px 5px -4px rgba(163,163,163,0.75);
+    padding: 1rem;
+    border-radius: 1rem;
+    border-left: solid 1px rgb(163,163,163);
+    border-top: solid 1px rgb(163,163,163);
+}
+.swiper-slide .slide-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.swiper-slide .slide-img img{
+    border-radius: 50%;
+    width: 15rem;
+    height: 15rem;
+    border: 5px solid #bdbdbd;
+}
+.swiper-slide h3{
+    margin: .3rem 0;
+    font-size: 1.4rem;
+}
+.swiper-slide p{
+    color: rgb(104, 107, 109);
+}
+.swiper-pagination-progressbar{
+    padding: 3px 0;
+    background: var(--tercero);
+    bottom: 0;
+    top: auto !important;
+}
 
+/* subs */
 
+.subscribe{
+    margin:  1.5rem auto;
+    background: rgba(0, 0, 0, .03);
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+.subscribe__content{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.subscribe__content h2{
+    font-size: 2.5rem;
+}
+.subscribe__content p{
+    font-size: 1.2rem;
+}
+.subscribe__img{
+    padding: 1rem;
+    width: 30rem;
+    overflow: hidden;
+}
 
+.footer{
+    padding: 1.5rem 0 0 0;
+}
+.footer-box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 1rem;
+}
+.footer__section div{
+    display: flex;
+    flex-direction: column;
+}
+.footer__social{
+    width: 100%;
+    justify-content: space-evenly;
+    display: flex;
+    gap: 1.5rem;
+}
+.footer__social a{
+    
+color: #1a1919;
+}
 
-
-
-
+.copyright{
+    margin:1rem 0 0 0;
+    font-weight: bold;
+    font-size: 1rem;
+    text-align: center;
+}
