--- a/css/app.css
+++ b/css/app.css
@@ -230,6 +230,12 @@ body::after{
     .work{
         padding: 0 1rem ;
     }
+    .work__content{
+        flex-direction: column;
+    }
+    .work :nth-child(2){
+        flex-direction: column-reverse;
+    }
 }
 
 
@@ -299,6 +305,11 @@ body::after{
     gap: 1rem;
     align-items: center;
 }
+@media (max-width: 768px){
+    .subscribe{
+        flex-direction: column;
+    }
+}
 .subscribe__content{
     display: flex;
     flex-direction: column;
@@ -317,7 +328,8 @@ body::after{
 }
 
 .footer{
-    padding: 1.5rem 0 0 0;
+    padding: 1.5rem .3rem 0 .3rem;
+    background: rgba(0, 0, 0, .01);
 }
 .footer-box{
     display: flex;
@@ -360,7 +372,22 @@ color: #1a1919;
         display: flex;
         padding-top: 1rem;
         z-index: 99;
+        position: relative;
+        transition: all .4s;
     }
+    .toggleMenu.toggle :nth-child(1){
+        transform: rotate(30deg);
+        transition: transform .4s;
+    }
+    .toggleMenu.toggle :nth-child(3){
+        transform: rotate(-30deg) ;
+        transition: transform .4s;
+    }
+    .toggleMenu.toggle :nth-child(2){
+        transform: translateX(-30%);
+        transition: transform .4s;
+    }
+
 }
 .toggleMenu span{ 
     display: block;
