--- a/css/app.css
+++ b/css/app.css
@@ -43,10 +43,11 @@ img{
     width: 100%;
     object-fit: cover;
 }
-
-body::after{
-    content: "";
-    top: -50%;
+body{
+    overflow: hidden;
+}
+section{
+    margin: 0 .5rem;
 }
 .container{
     max-width:1400px ;
@@ -69,10 +70,9 @@ body::after{
 }
 
 /* navbar */
-.bg-head{
-    /* background: #e7dbdb; */
-}
+
 .header{
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -115,6 +115,10 @@ body::after{
 }
 
 @media (max-width: 768px){
+
+    html{
+        font-size: 80%;
+    }
     .header{
         position: relative;
         
@@ -134,6 +138,10 @@ body::after{
     }
     .header .navbar.toggle{
         right: 0;
+    }
+    .header .toggleMenu{
+        align-items: center;
+        justify-content: center;
     }
     .navbar .navbar__links{
         flex-direction: column;
@@ -188,9 +196,17 @@ body::after{
         margin: 1rem 0;
     }
 }
+@media (max-width: 468px){
+    .hero__content{
+        align-items: center;
+    }
+    .hero__btn{
+        padding: 1rem 1.5rem ;
+    }
+}
 /* COMPANIES */
 .companies{
-
+    padding: 0 1rem;
     background: var(--sexto);
 }
 .companies__cards{
@@ -208,6 +224,17 @@ body::after{
 .companies__cards a:hover img{
     transform: scale(.95);
 }
+@media (max-width: 768px){
+    .companies__cards a img{
+        transform: scale(.65);
+    }
+    .companies__cards a:hover img{
+        transform: scale(.70);
+    }
+}
+
+/* work */
+
 .work{
     position: relative;
     padding: 2rem 0;
@@ -309,6 +336,13 @@ body::after{
     .subscribe{
         flex-direction: column;
     }
+    .subscribe__content{
+        align-items: center;
+    }
+    .subscribe__btn{
+        width: 100%;
+        margin-bottom: 1rem;
+    }
 }
 .subscribe__content{
     display: flex;
@@ -358,11 +392,22 @@ color: #1a1919;
     font-size: 1rem;
     text-align: center;
 }
+@media (max-width: 468px){
+    .footer__social{
+        width: 100%;
+        justify-content: flex-start;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1.5rem;
+    }
+}
+
 
 .toggleMenu{
     cursor: pointer;
     display: none;
-    flex-direction: column;
+
+    align-items: center;
     gap: .05rem;
     height: 100%;
     padding: .1rem;
@@ -370,7 +415,9 @@ color: #1a1919;
 @media (max-width: 768px){
     .toggleMenu{
         display: flex;
-        padding-top: 1rem;
+        flex-direction: column;
+        justify-content: center;
+        margin: auto 0;
         z-index: 99;
         position: relative;
         transition: all .4s;
